<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">selfParking</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_alert_list_view">selfParking</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Alerts...</string>
    <string name="action_settings">Settings</string>
    <string name="action_alert">New Alert</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_add_alarm">Crear Recordatorio</string>
    <string name="alert_description">Descripción</string>
    <string name="alert_description_hint">Por ej. "Comprar comida" o "Pasar a buscar la cosa"</string>
    <string name="alert_place">Donde?</string>
    <string name="place_type_option">Tipo de lugar</string>
    <string name="place_address_option">Lugar específico</string>
    <string name="place_address_title">Dirección</string>
    <string name="place_type_title">Elija el tipo de lugar</string>
    <string name="due_date">Vencimiento</string>
    <string name="from">Desde</string>
    <string name="to">Hasta</string>
    <string name="loading_data">Loading data...</string>
    <string name="select_user_title">Para quién es?</string>
    <string name="title_alert_details">Ver Recordatorio</string>
    <string name="what_to_do">Qué tengo que hacer?</string>
    <string name="where">Dónde?</string>
    <string name="who_asked">Quién lo pidió?</string>
    <string name="snooze">Snooze</string>

</resources>
